zhaoge/force-app/main/default/objects/Aobject__c/Aobject__c.object-meta.xml
<CustomObject>
    <label>A主オブジェクト</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>A主オブジェクト名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>