zhaoge/force-app/main/default/objects/Aobject__c/fields/Ab__c.field-meta.xml
<CustomField>
    <fullName>Ab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AB参照</label>
    <referenceTo>Bobject__c</referenceTo>
    <relationshipLabel>A主オブジェクト</relationshipLabel>
    <relationshipName>AbObject</relationshipName>
    <type>Lookup</type>
</CustomField>