zhaoge/force-app/main/default/objects/Aobject__c/fields/AobjetContact__c.field-meta.xml
<CustomField>
    <fullName>AobjetContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>A主オブジェクト</relationshipLabel>
    <relationshipName>AContact</relationshipName>
    <type>Lookup</type>
</CustomField>