zhaoge/force-app/main/default/objects/Aobject__c/fields/Mail01__c.field-meta.xml
<CustomField>
    <fullName>Mail01__c</fullName>
    <label>メール1</label>
    <type>Email</type>
</CustomField>