zhaoge/force-app/main/default/objects/Aobject__c/recordTypes/AA.recordType-meta.xml
<RecordType>
    <fullName>AA</fullName>
    <active>true</active>
    <label>AA</label>
</RecordType>