zhaoge/force-app/main/default/objects/Aobject__c/recordTypes/BB.recordType-meta.xml
<RecordType>
    <fullName>BB</fullName>
    <active>true</active>
    <label>BB</label>
</RecordType>